labs/networkpolicy-troubleshooting/10-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: np-app
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo:1.0
          args:
            - "-listen=:5678"
            - "-text=hello-from-api"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: np-app
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: np-app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: curlimages/curl:8.5.0
          command: ["sh", "-lc"]
          args:
            - "sleep 365d"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
  namespace: np-monitoring
  labels:
    app: scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
        - name: scraper
          image: curlimages/curl:8.5.0
          command: ["sh", "-lc"]
          args:
            - "sleep 365d"
